# spatialdetection

./: .gitignore  README.md  pyproject.toml
data/raw/: SOURCES.md
examples/: pcode_example.py  quickstart.py
notebooks/: quickstart.ipynb
scripts/: build_thailand_admin_centroids.py
src/spatialdetection/: __init__.py  autocorrelation.py  clustering.py  detect.py  health_zones.py  io.py  level_hotspots.py  plotting.py  spatiotemporal.py  temporal.py
tests/: test_autocorrelation.py  test_clustering.py  test_detect.py  test_health_zones.py  test_io.py  test_level_hotspots.py  test_plotting.py  test_spatiotemporal.py  test_temporal.py
