[project]
name = "spatialdetection"
version = "0.1.0"
description = "Toolkit for spatial clustering and anomaly/hotspot detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "esda>=2.9.0",
    "geopandas>=1.1.3",
    "libpysal>=4.14.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
]

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]
